# eliva26

./: .gitignore  pyproject.toml  requirements.txt
Challenge-1/: eliva26-restoration-example.ipynb  evaluate.py  submission.csv  submission_1.csv  submission_10.csv  submission_11.csv  submission_2.csv  submission_3.csv
Challenge-2/: gear-detection-sample-code.ipynb  solution.ipynb  submission-1.csv  submission-2.csv  submission-3.csv  submission.csv  test.ipynb  test_circle_fitting.ipynb  test_simple.ipynb  train_solution.csv
Tests/: color_segmentation.py  dft-filter.ipynb  dft2d.ipynb  fourier.ipynb  fourier_filtering_test.ipynb  noise_tests.ipynb  sift_match.ipynb  test.ipynb
