[project]
name = "eliva"
version = "0.1.0"
description = "Scripts and Challenges from the course 'Image Processing and Computer Vision', Universtiy of Turin, 2026."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.62.0",
    "imageio==2.37.3",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "np==1.0.2",
    "numpy==2.4.3",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "pandas>=3.0.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "scikit-image==0.26.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tifffile==2026.3.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "wcwidth==0.6.0",
]
